[project]
name = "slinflux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8.2",
    "obspy>=1.4.1",
    "aiohttp>=3.10.5",
    "typer>=0.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
slinflux = "slinflux.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=3.8.0",
]


[tool.ruff.lint]
extend-select = ["DTZ", "ASYNC", "N"]
